style.css
/* ... */
html{
    font-size: 10px;
    font-family: 'Montserrat', sans-serif;
    scroll-behavior: smooth;
}
a{
    text-decoration: None;
}
.container{
    min-height: 100vh;
    width: 100vw;
    display: flex;
    align-items: center;
    justify-content: center;
}
img{
    height: 100%;
    width: 100%;
    object-fit: cover;   
}
p{
    color: white;
    text-align: left;
    font-size: 1.4rem;
    line-height: 1.9rem;
}
.section-title{
    font-size: 4rem;
    font-weight: 300;
    color: black;
    margin-bottom: 10px;
    text-transform: uppercase;
    letter-spacing: .2rem;
    text-align: center;
}
.section-title span{
    color: crimson;
}
.brand h1{
    font-size: 2.6rem;
    text-transform: uppercase;
    color: white;
}
.brand h1 span{
    color: crimson;
}
body{
    overflow-x: hidden;
}

/*header*/
#header{
    position: fixed;
    z-index: 1000;
    left: 0;
    top: 0;
    width: 100vw;
    height: auto;
}
#header .header{
    min-height: 8vh;
    background-color: rgba(31,30,30,0.24);
    transition: .3s ease background-color;
}
#header .nav-bar{
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    height: 100%;
    max-width: 1300px;
    padding: 0 20px;
}
#header .nav-list ul{
    list-style: none;
    position: absolute;
    background-color: rgb(30,30,30);
    width: 100vw;
    height: 100vh;
    left: 100%;
    top: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1;
    overflow-x: hidden;
    flex-direction: column;
    transition: .3s ease left;
    
}
#header .nav-list ul.active{
    left: 0%;
}
#header .nav-list ul a{
    font-size: 2.5rem;
    font-weight: 500;
    letter-spacing: .2rem;
    text-decoration: none;
    text-transform: uppercase;
    color: white;
    padding: 20px;
    display: block;
}
#header .nav-list ul a::after{
    content: attr(data-after);
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%) scale(0);
    color: rgba(240, 248, 255, 0.06);
    font-size: 8rem;
    letter-spacing: 50px;
    z-index: -1;
    transition: .3s ease letter-spacing;
}
#header .nav-list ul li:hover a {
    color: crimson;
}
#header .nav-list ul li:hover a::after{
    transform: translate(-50%,-50%) scale(1);
    letter-spacing: initial;
}
#header .hamburger{
    z-index: 100;
    height: 60px;
    width: 60px;
    display: inline-block;
    border: 3px solid white;
    border-radius: 50%;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    transform: scale(.7);
    margin-right: 20px;
}
#header .hamburger:after{
    content: '';
    position: absolute;
    height: 100%;
    width: 100%;
    
    border-radius: 50%;
    border: 3px solid white;
    animation: hamburger_pulse 1s ease infinite;
}
#header .hamburger .bar{
    height: 2px;
    width: 30px;
    position: relative;
    background-color: white;
    z-index: -1;
}
#header .hamburger .bar::after,
#header .hamburger .bar::before{
    content: '';
    position: absolute;
    height: 100%;
    width: 100%;
    left: 0;
    background-color: white;
    transition: .3s ease;
    transition-property: top, bottom;
}
#header .hamburger .bar::after{
    top: 8px;
}
#header .hamburger .bar::before{
    bottom: 8px;
}
#header .hamburger.active .bar::before{
    bottom: 0;
}
#header .hamburger.active .bar::after{
    top: 0;
}

/*home*/
#home{
    background-image: url(./image/hero-bg.png);
    background-size: cover;
    background-position: top center;
    position: relative;
    z-index: 1;
}
#home::after{
    content: '';
    position: absolute;
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    background-color: black;
    opacity: 0.7;
    z-index: -1;
}
#home .home{
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 50px;
    justify-content: flex-start;
}

#home h1{
    display: block;
    width: fit-content;
    font-size: 3.5rem;
    position: relative;
    color: transparent;
    animation: text_reveal .5s ease forwards;
    animation-delay: 1s;
}
#home h1:nth-child(1){
    animation-delay: 1s;
}
#home h1:nth-child(2){
    animation-delay: 2s;
}
#home h1:nth-child(3){
    animation: text_reveal_name .5s ease forwards;

    animation-delay: 3s;
}
#home h1 span{
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 0;
    background-color: crimson;
    animation: text_reveal_box 1s ease;
    animation-delay: .5s;
}
#home h1:nth-child(1) span{
    animation-delay: .5s;
}
#home h1:nth-child(2) span{
    animation-delay: 1.5s;
}
#home h1:nth-child(3) span{

    animation-delay: 2.5s;
}
.cta{
    display: inline-block;
    padding: 10px 30px;
    color: white;
    background-color: transparent;
    border: 2px solid crimson;
    font-size: 2rem;
    text-transform: uppercase;
    letter-spacing: 0.1rem;
    margin-top: 30px;
    transition: .3s ease background-color;
    transition-property: background-color, color;
}
.cta:hover{
    color: white;
    background-color: crimson;

}

/*Second section interests*/

#interests .interests{
    flex-direction: column;
    text-align: center;
    max-width: 1500px;
    margin: 0 auto;
    
    padding: 120px 10px 30px 10px;

}
#interests .service-top{
    max-width: 500px;
    margin: 0 auto;
    text-align: center;
}
#interests .service-top p{
    color: black;
    font-size: 1.4rem;
    text-align: center;
    margin-top: 5px;
    line-height: 2.5rem;
    font-weight: 300;
    letter-spacing: .05rem;
}
#interests .service-bottom{
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    margin-top: 50px;
}
/* ... */

